完成前端查詢新界面

--- a/project/public/detail/css/button_switchs.css
+++ b/project/public/detail/css/button_switchs.css
@@ -4,7 +4,7 @@
 /* 按鈕 hover 效果已升級（再強化） */
 #welcomeModal button,
 #contactBtn {
-    margin-top: 15px;
+    /*margin-top: 15px;*/
     background-color: #007aff;
     color: white;
     border: none;
