--- a/project/public/detail/css/inputpanel.css
+++ b/project/public/detail/css/inputpanel.css
@@ -752,3 +752,19 @@ label:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+.bug-btn {
+    color: #007aff; /* Apple 藍 */
+    font-weight: 500;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+    display: flex;
+    padding: 6px 10px;
+    border-radius: 6px;
+    transition: background-color 0.3s ease;
+    justify-content: center;
+}
+
+.bug-btn:hover {
+    background-color: rgba(0, 122, 255, 0.1); /* 輕微hover效果 */
+}
